Adjust 'Please fill out the form' text's color and weight, and add an arrow-down icon next to it

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -70,9 +70,13 @@
             </div>
         </div>
         <div class="col-12 col-lg-6">
-            <p class="text-muted">Please fill out the form below to complete your order</p>
+            <p><strong>Please fill out the form below to complete your order</strong>
+                <span class="icon">
+                    <i class="fas fa-arrow-down"></i>
+                </span>
+            </p>
 
-            
+
 
             <hr />
 
@@ -80,7 +84,7 @@
 
             <hr />
 
-            
+
         </div>
     </div>
 </div>
