Add <strong> to 'Order Grand Total' text

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -69,7 +69,7 @@
                     <p class="my-0">
                         <span class="icon">
                             <i class="fas fa-equals"></i>
-                        </span>Order Grand Total:
+                        </span><strong>Order Grand Total:</strong>
                     </p>
                 </div>
                 <div class="col-3">
