Style checkout_form buttons to better match rest of site
- remove Bootstrap's .rounded-0
- add Bulma's .buttons
- add href
- increase lock icon's size
- style colors, weight, margin, and on-hover

--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -28,3 +28,15 @@ a:hover {
 .dropdown-menu {
     background-color: initial;
 }
+
+#submit-button {
+    color: #fff;
+    background-color: hsl(0, 0%, 29%);
+    font-weight: bolder;
+    margin-left: 1rem;
+}
+
+#submit-button:hover {
+    border-color: #b5b5b5;
+    color: #363636;
+}
