--- a/checkout/templates/checkout/checkout_form.html
+++ b/checkout/templates/checkout/checkout_form.html
@@ -3,12 +3,12 @@
 <form action="{% url 'checkout' %}" method="POST" id="payment-form">
     {% csrf_token %}
     <fieldset class="rounded px-3 mb-5">
-        <legend class="fieldset-label small text-black px-2 w-auto">Details</legend>
+        <legend class="fieldset-label small text-black px-2 w-auto">User Details</legend>
         {{ order_form.full_name | as_crispy_field }}
         {{ order_form.email | as_crispy_field }}
     </fieldset>
-    <fieldset class="rounded px-3 mb-5">
-        <legend class="fieldset-label small text-black px-2 w-auto">Delivery</legend>
+    <fieldset class="rounded px-3 mb-5" id="delivery-details">
+        <legend class="fieldset-label small text-black px-2 w-auto">Delivery Details</legend>
         {{ order_form.phone_number | as_crispy_field }}
         {{ order_form.street_address1 | as_crispy_field }}
         {{ order_form.street_address2 | as_crispy_field }}
@@ -38,6 +38,7 @@
         <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
     </fieldset>
 
+    <!--
     <button class="button keep-shopping">
         <a href="{% url 'products' %}">
             <span class="icon">
@@ -55,18 +56,20 @@
             </span>
         </a>
     </button>
+    -->
 
     <div class="submit-button text-right mt-5 mb-2">
-        <a href="{% url 'view_bag' %}" class="btn btn-outline-black rounded-0">
+        <a href="{% url 'view_bag' %}" class="btn btn-outline-black">
             <span class="icon">
                 <i class="fas fa-chevron-left"></i>
+                <i class="fas fa-shopping-bag"></i>
             </span>
             <span class="font-weight-bold">Adjust Bag</span>
         </a>
-        <button id="submit-button" class="btn btn-black rounded-0">
+        <button id="submit-button" class="btn btn-black button">
             <span class="font-weight-bold">Complete Order</span>
             <span class="icon">
-                <i class="fas fa-lock"></i>
+                <i class="fas fa-lock fa-lg"></i>
             </span>
         </button>
         <p class="small text-danger my-0">
