--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -10,6 +10,15 @@ select option[value=""] {
 
 #card-element {
     background-color: #fff;
+    height: calc(38px + 5px);
+    border-radius: 5px;
+    border: 5px solid hsl(0, 0%, 29%);
+    text-align: center;
+    padding-top: 7px;
+}
+
+#card-errors {
+    font-weight: bold;
 }
 
 /* ------------------------------- */
